@@ -37,6 +37,7 @@ Version 1.13.0-dev:
      wesnoth. Bug fix #21025.
    * Fix bug stopping drag+drop for unit movements
    * Revert premoved units selection to Wesnoth 1.10 behavior (#21448)
+   * Fix unit move continuation if enemy discovered (#21372)
 
 Version 1.11.11:
  * Campaigns:
