@@ -119,6 +119,7 @@ Version 1.13.0-dev:
      unsigned long rather than an unsigned int.
    * Fix bug #21491: fix drag+drop for unit movements
    * Fix bug #21448: make premoved units selection like in Wesnoth 1.10
+   * Fix bug #21372: fix unit move continuation if enemy discovered
 
 Version 1.11.11:
  * Add-ons server:
